# ieee-senior-design-project

./: .gitignore  README.md  test.py
quack_overflow_ros/: launch_ros2.sh  sync_ros2.sh
ros2_ws/: instructions.txt  mecanum_test.py  pin_test_script.py  rebuild_and_run.sh
ros2_ws/src/: CMakeLists.txt  mecanum_vehicle.py  package.xml  paddles.py  setup.py
ros2_ws/src/mecanum_robot/movement/: mecanum_node.py  mecanum_vehicle.py  package.xml  setup.cfg  setup.py
ros2_ws/src/mecanum_robot/movement/movement/: mecanum_node.py
ros2_ws/src/movement/: mecanum_node.py  package.xml  setup.py
ros2_ws/src/movement/movement/: mecanum_vehicle.py
ros2_ws/src/paddle_controls/: package.xml  setup.cfg  setup.py
