<?xml version="1.0"?>
<package format="3">
  <name>movement</name>
  <version>0.0.0</version>
  <description>Mecanum robot control package</description>

  <maintainer email="rprajeev@example.com">rprajeev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

</package>
